For triggers, set some to always build from devel no matter the branch.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -400,16 +400,26 @@ for prj in lsb_dependencies:
             archlist = [lsb_buildslave_arch_indep_arch]
         else:
             archlist = lsb_archs
+
+        # Figure out if the project needs to be built from devel
+        # every time.  For now, just use "branches not specific
+        # to 4.0" as the rule for this.
+        devel_only = prj not in branch_watch_list["4.0"]
+
+        # Get the repository name to pull from.
         default_prj = prj
         for (pkgprj, repo) in lsb_packaging_projects:
             if pkgprj == prj:
                 default_prj = repo
                 break
+
+        # Actually set up the schedulers.
         for arch in archlist:
             prj_name = "%s-%s" % (prj, arch)
             sch = IndepTriggerable(name="trigger-" + prj_name,
                                    builderNames=[prj_name],
-                                   defaultProject=default_prj)
+                                   defaultProject=default_prj,
+                                   alwaysDevel=devel_only)
             c["schedulers"].append(sch)
 
 # Finally, the big weekly scheduler.  This makes sure every non-SDK
