Limit builds done on "low resource architectures".

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -34,15 +34,28 @@ from bzr_buildbot import BzrPoller
 # Toplevel configuration, used by the builder/scheduler setup.
 
 web_htpasswd_path = "/data/buildbot/buildbot_htpasswd"
+bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
+# Timers and timeouts for builds.  We define them as hours here,
+# and translate them into seconds below for buildbot's benefit.
 stable_timer_hours = 1
 slow_stable_timer_hours = 6
 bzr_timeout_hours = 4
 build_timeout_hours = 4
 
-bzr_toplevel = "http://bzr.linuxfoundation.org/"
-
+# Supported architectures.
 lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
+
+# This funny-sounding setting controls which architecture we hold
+# responsible for building architecture-independent components.
+lsb_buildslave_arch_indep_arch = "x86_64"
+
+# Some architectures, for whatever reason, need to use as few resources
+# as possible while still allowing it to be supported.  We don't build
+# these archs on every version control change, and we may limit builds
+# in other ways as well.  Note that the arch independent arch, defined
+# immediately above, CANNOT be part of this list.
+low_resource_archs = ["s390", "s390x"]
 
 # Extra projects to build as part of the SDK project.
 lsb_bzr_sdk_projects = ["lsbdev-c++", "lsbdev-qt", "lsbdev-qt3"]
@@ -126,10 +139,6 @@ pkg_lock = locks.SlaveLock("package_manager", maxCount = 1)
 # we risk concurrent builds clobbering each other.  Right now,
 # only misc-test works this way.
 repo_locks = { "misc-test": locks.SlaveLock("misc-test", maxCount = 1) }
-
-# This funny-sounding setting controls which architecture we hold
-# responsible for building architecture-independent components.
-lsb_buildslave_arch_indep_arch = "x86_64"
 
 # Branches we watch, besides devel.
 branch_watch_list = { "4.0": [ "appbat", "azov-qt3-tests", "azov-qt4-tests",
@@ -310,20 +319,23 @@ for arch in lsb_archs:
     sch_libbat = IndepTriggerable(name="trigger-libbat-" + arch,
                                   builderNames=["libbat-" + arch],
                                   defaultProject="appbat")
-    sch_appbat = scheduler.Scheduler(name="sch-appbat-" + arch,
-                                     branch="lsb/devel/appbat",
-                                     builderNames=["appbat-" + arch],
-                                     treeStableTimer=slow_stable_timer_seconds)
-    sch_devchk = scheduler.Scheduler(name="sch-devchk-" + arch,
-                                     branch="lsb/devel/misc-test",
-                                     builderNames=["devchk-" + arch],
-                                     treeStableTimer=stable_timer_seconds)
-    sch_sdk = scheduler.Scheduler(name="sch-build-sdk-" + arch,
-                                  branch="lsb/devel/build_env",
-                                  builderNames=["build-sdk-" + arch],
-                                  treeStableTimer=stable_timer_seconds)
+    c['schedulers'].append(sch_libbat)
 
-    c['schedulers'].extend([sch_sdk, sch_libbat, sch_appbat, sch_devchk])
+    if arch not in low_resource_archs:
+        sch_appbat = scheduler.Scheduler(
+            name="sch-appbat-" + arch, branch="lsb/devel/appbat",
+            builderNames=["appbat-" + arch], 
+            treeStableTimer=slow_stable_timer_seconds)
+        sch_devchk = scheduler.Scheduler(name="sch-devchk-" + arch,
+                                         branch="lsb/devel/misc-test",
+                                         builderNames=["devchk-" + arch],
+                                         treeStableTimer=stable_timer_seconds)
+        sch_sdk = scheduler.Scheduler(name="sch-build-sdk-" + arch,
+                                      branch="lsb/devel/build_env",
+                                      builderNames=["build-sdk-" + arch],
+                                      treeStableTimer=stable_timer_seconds)
+
+        c['schedulers'].extend([sch_sdk, sch_appbat, sch_devchk])
 
 # Package subdir schedulers.
 
@@ -334,20 +346,6 @@ for prj in lsb_pkg_subdir_projects:
         archlist = lsb_archs
     for arch in archlist:
         prj_name = "%s-%s" % (prj, arch)
-        sch = scheduler.Scheduler(name="sch-" + prj_name,
-                                  branch=os.path.join("lsb/devel", prj),
-                                  builderNames=[prj_name],
-                                  treeStableTimer=stable_timer_seconds)
-        c['schedulers'].append(sch)
-
-        for branch in branch_watch_list:
-            if prj in branch_watch_list[branch]:
-                sch = scheduler.Scheduler(
-                    name="sch-%s-%s" % (prj_name, branch),
-                    branch=os.path.join("lsb", branch, prj),
-                    builderNames=[prj_name],
-                    treeStableTimer=stable_timer_seconds)
-                c['schedulers'].append(sch)
 
         for deplist in lsb_dependencies.itervalues():
             if prj in deplist:
@@ -357,13 +355,29 @@ for prj in lsb_pkg_subdir_projects:
                 c['schedulers'].append(sch)
                 break
 
+        if arch not in low_resource_archs:
+            sch = scheduler.Scheduler(name="sch-" + prj_name,
+                                      branch=os.path.join("lsb/devel", prj),
+                                      builderNames=[prj_name],
+                                      treeStableTimer=stable_timer_seconds)
+            c['schedulers'].append(sch)
+
+            for branch in branch_watch_list:
+                if prj in branch_watch_list[branch]:
+                    sch = scheduler.Scheduler(
+                        name="sch-%s-%s" % (prj_name, branch),
+                        branch=os.path.join("lsb", branch, prj),
+                        builderNames=[prj_name],
+                        treeStableTimer=stable_timer_seconds)
+                    c['schedulers'].append(sch)
+
 # Packaging project schedulers.
 
 for (prj, repo) in lsb_packaging_projects:
     if prj in lsb_arch_indep_projects:
         archlist = [lsb_buildslave_arch_indep_arch]
     else:
-        archlist = lsb_archs
+        archlist = [x for x in lsb_archs if x not in low_resource_archs]
     branches = ["lsb/devel/packaging"]
     if repo is not None:
         branches.append(os.path.join("lsb/devel", repo))
