--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -578,13 +578,21 @@ for arch in lsb_archs:
                       defaultBranch="lsb/devel/%s" % prj,
                       mode="copy", timeout=bzr_timeout_seconds, workdir=prj))
         for other_repo in lsb_pkg_subdir_projects[prj]:
+            # Figure out if the project needs to be checked out from devel
+            # every time.  For now, just use "branches not specific
+            # to 4.0" as the rule for this.
+            if other_repo in branch_watch_list["4.0"]:
+                checkout_url = "%s/lsb/%%(branch_name)s/%s" \
+                    % (bzr_toplevel, other_repo)
+            else:
+                checkout_url = "%s/lsb/devel/%s" % (bzr_toplevel, other_repo)
+
             b.addStep(ShellCommand(command=["rm", "-rf", "../" + other_repo],
                                    name="clear-old-" + other_repo,
                                    workdir=prj))
             b.addStep(ShellCommand(
                     command=["bzr", "checkout", 
-                             WithProperties("%s/lsb/%%(branch_name)s/%s"
-                                            % (bzr_toplevel, other_repo)),
+                             WithProperties(checkout_url),
                              "../" + other_repo],
                     name="checkout-" + other_repo, timeout=bzr_timeout_seconds,
                     workdir=prj))
