Refactor to put "always pull from devel" logic in one place.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -177,6 +177,12 @@ def add_post_dependency_triggers(project, arch, builder):
                                      name="update-pkgs", locks=[pkg_lock],
                                      flunkOnFailure=False))
 
+def always_pull_from_devel(project):
+    # Figure out if the project needs to be built from devel
+    # every time.  For now, just use "branches not specific
+    # to 4.0" as the rule for this.
+    return project not in branch_watch_list["4.0"]
+
 
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
@@ -400,10 +406,7 @@ for prj in lsb_dependencies:
         else:
             archlist = lsb_archs
 
-        # Figure out if the project needs to be built from devel
-        # every time.  For now, just use "branches not specific
-        # to 4.0" as the rule for this.
-        devel_only = prj not in branch_watch_list["4.0"]
+        devel_only = always_pull_from_devel(prj)
 
         # Get the repository name to pull from.
         default_prj = prj
@@ -578,14 +581,11 @@ for arch in lsb_archs:
                       defaultBranch="lsb/devel/%s" % prj,
                       mode="copy", timeout=bzr_timeout_seconds, workdir=prj))
         for other_repo in lsb_pkg_subdir_projects[prj]:
-            # Figure out if the project needs to be checked out from devel
-            # every time.  For now, just use "branches not specific
-            # to 4.0" as the rule for this.
-            if other_repo in branch_watch_list["4.0"]:
+            if always_pull_from_devel(other_repo):
+                checkout_url = "%s/lsb/devel/%s" % (bzr_toplevel, other_repo)
+            else:
                 checkout_url = "%s/lsb/%%(branch_name)s/%s" \
                     % (bzr_toplevel, other_repo)
-            else:
-                checkout_url = "%s/lsb/devel/%s" % (bzr_toplevel, other_repo)
 
             b.addStep(ShellCommand(command=["rm", "-rf", "../" + other_repo],
                                    name="clear-old-" + other_repo,
