Create custom build steps for appbat configure and build.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -16,8 +16,7 @@ from buildbot.status import html
 from buildbot.status import words
 from buildbot.status.web.auth import HTPasswdAuth
 
-from lfbuildbot import LSBBuildCommand, LSBBuildPackage, \
-    LSBBuildFromPackaging, LSBReloadSDK, IndepTriggerable, MultiScheduler
+import lfbuildbot
 
 from bzr_buildbot import BzrPoller
 
@@ -306,12 +305,11 @@ jobdir_repos = dict(lsb_packaging_projects)
 jobdir_repos["build-sdk"] = "build_env"
 jobdir_repos["devchk"] = "misc-test"
 
-sch_jobdir = MultiScheduler(name="sch_jobdir",
-                            builderNames=multi_builder_list, 
-                            jobdir="/var/buildbot",
-                            repos=jobdir_repos, archs=lsb_archs, 
-                            indep_prj=lsb_arch_indep_projects, 
-                            indep_arch=lsb_buildslave_arch_indep_arch)
+sch_jobdir = lfbuildbot.MultiScheduler(
+    name="sch_jobdir", builderNames=multi_builder_list, 
+    jobdir="/var/buildbot", repos=jobdir_repos, archs=lsb_archs, 
+    indep_prj=lsb_arch_indep_projects,
+    indep_arch=lsb_buildslave_arch_indep_arch)
 
 c['schedulers'] = [sch_jobdir]
 
@@ -322,9 +320,9 @@ c['schedulers'] = [sch_jobdir]
 # as well as the appbat.
 
 for arch in lsb_archs:
-    sch_libbat = IndepTriggerable(name="trigger-libbat-" + arch,
-                                  builderNames=["libbat-" + arch],
-                                  defaultProject="appbat")
+    sch_libbat = lfbuildbot.IndepTriggerable(name="trigger-libbat-" + arch,
+                                             builderNames=["libbat-" + arch],
+                                             defaultProject="appbat")
     c['schedulers'].append(sch_libbat)
 
     if arch not in low_resource_archs:
@@ -355,9 +353,9 @@ for prj in lsb_pkg_subdir_projects:
 
         for deplist in lsb_dependencies.itervalues():
             if prj in deplist:
-                sch = IndepTriggerable(name="trigger-" + prj_name,
-                                       builderNames=[prj_name],
-                                       defaultProject=prj)
+                sch = lfbuildbot.IndepTriggerable(name="trigger-" + prj_name,
+                                                  builderNames=[prj_name],
+                                                  defaultProject=prj)
                 c['schedulers'].append(sch)
                 break
 
@@ -418,10 +416,10 @@ for prj in lsb_dependencies:
         # Actually set up the schedulers.
         for arch in archlist:
             prj_name = "%s-%s" % (prj, arch)
-            sch = IndepTriggerable(name="trigger-" + prj_name,
-                                   builderNames=[prj_name],
-                                   defaultProject=default_prj,
-                                   alwaysDevel=devel_only)
+            sch = lfbuildbot.IndepTriggerable(name="trigger-" + prj_name,
+                                              builderNames=[prj_name],
+                                              defaultProject=default_prj,
+                                              alwaysDevel=devel_only)
             c["schedulers"].append(sch)
 
 
@@ -499,11 +497,11 @@ for arch in lsb_archs:
         ShellCommand(command=["mkdir", "-p", "../sdk-results/build_env"],
                      name="mkdir_base", workdir="build_env"))
     build_sdk.addStep(
-        LSBBuildCommand(command="cd package && make clean " + 
-                                "&& make BZRTREES=../..", 
-                        name="build_base", workdir="build_env", 
-                        haltOnFailure=True, makeargs=True,
-                        timeout=build_timeout_seconds))
+        lfbuildbot.LSBBuildCommand(command="cd package && make clean " + 
+                                   "&& make BZRTREES=../..", 
+                                   name="build_base", workdir="build_env", 
+                                   haltOnFailure=True, makeargs=True,
+                                   timeout=build_timeout_seconds))
     build_sdk.addStep(
         ShellCommand(command="cp package/*.rpm ../sdk-results/build_env", 
                      name="copy_base", workdir="build_env"))
@@ -517,11 +515,12 @@ for arch in lsb_archs:
                                        workdir="packaging"))
         sdk_command = "cd " + sdk_project + \
             " && make rpm_package BZR_ROOT=../.."
-        build_sdk.addStep(LSBBuildCommand(command=sdk_command,
-                                          name="build_" + sdk_project,
-                                          workdir="packaging",
-                                          haltOnFailure=True, makeargs=True,
-                                          timeout=build_timeout_seconds))
+        build_sdk.addStep(
+            lfbuildbot.LSBBuildCommand(command=sdk_command,
+                                       name="build_" + sdk_project,
+                                       workdir="packaging",
+                                       haltOnFailure=True, makeargs=True,
+                                       timeout=build_timeout_seconds))
         build_sdk.addStep(
             ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
                                  % (sdk_project, sdk_project),
@@ -575,7 +574,7 @@ for arch in lsb_archs:
             build_arch = arch
 
         b = factory.BuildFactory()
-        b.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
+        b.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
         add_pre_dependency_triggers(prj, build_arch, b)
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
@@ -600,8 +599,9 @@ for arch in lsb_archs:
                                name="clear-old-results", workdir=prj))
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                name="create-results-dir", workdir=prj))
-        b.addStep(LSBBuildPackage(name="build", haltOnFailure=True,
-                                  timeout=build_timeout_seconds, workdir=prj))
+        b.addStep(lfbuildbot.LSBBuildPackage(name="build", haltOnFailure=True,
+                                             timeout=build_timeout_seconds,
+                                             workdir=prj))
         b.addStep(ShellCommand(
                 command="find -L package -name '*.rpm' " +
                         "-exec cp '{}' ../results ';'",
@@ -644,7 +644,7 @@ for arch in lsb_archs:
             build_arch = arch
 
         b = factory.BuildFactory()
-        b.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
+        b.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
         add_pre_dependency_triggers(prj, build_arch, b)
         if repo is not None:
             b.addStep(Bzr(baseURL=bzr_toplevel,
@@ -663,10 +663,11 @@ for arch in lsb_archs:
                                name="clear-old-results"))
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                name="make-results-dir"))
-        b.addStep(LSBBuildFromPackaging(subdir=prj,
-                                        env={"BZRTREES": ".."},
-                                        name="build", haltOnFailure=True,
-                                        timeout=build_timeout_seconds))
+        b.addStep(
+            lfbuildbot.LSBBuildFromPackaging(subdir=prj,
+                                             env={"BZRTREES": ".."},
+                                             name="build", haltOnFailure=True,
+                                             timeout=build_timeout_seconds))
         b.addStep(ShellCommand(
                 command="find ../packaging -name '*.rpm' " +
                         "-exec cp '{}' ../results ';'",
@@ -701,7 +702,8 @@ for arch in lsb_archs:
 
     libbat = factory.BuildFactory()
 
-    libbat.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
+    libbat.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk", 
+                                           locks=[pkg_lock]))
 
     add_pre_dependency_triggers("libbat", arch, libbat)
 
@@ -730,16 +732,21 @@ for arch in lsb_archs:
     libbat.addStep(ShellCommand(command="rm -f /tmp/appbat-pkgcache/*",
                                 workdir="appbat", name="clear-pkgcache",
                                 flunkOnFailure=False, haltOnFailure=False))
-    libbat.addStep(LSBBuildCommand(command=["./configure.libbat"],
-                                   workdir="appbat", name="configure"))
+    libbat.addStep(
+        lfbuildbot.LSBConfigureAppbat(command=["./configure.libbat"],
+                                      workdir="appbat", name="configure"))
     libbat.addStep(ShellCommand(command="make check || rm -f packages/*.tar*",
                                 workdir="appbat", name="check-pkgcache"))
-    libbat.addStep(Compile(command=["make", "libbat", "ENTITYCHECK_QUIET=-q"], 
-                           workdir="appbat", timeout=build_timeout_seconds))
-    libbat.addStep(LSBBuildCommand(command=["make", "check-libbat"],
+    libbat.addStep(
+        lfbuildbot.LSBBuildAppbat(command="make libbat ENTITYCHECK_QUIET=-q", 
+                                  workdir="appbat",
+                                  timeout=build_timeout_seconds))
+    libbat.addStep(
+        lfbuildbot.LSBBuildCommand(command=["make", "check-libbat"],
                                    workdir="appbat",
                                    name="check-libbat", haltOnFailure=True))
-    libbat.addStep(LSBBuildCommand(command="cd rpm && make libbat",
+    libbat.addStep(
+        lfbuildbot.LSBBuildCommand(command="cd rpm && make libbat",
                                    name="build-pkg", workdir="appbat"))
     libbat.addStep(ShellCommand(
             command="find rpm -name '*.rpm' -exec cp '{}' ../results ';'",
@@ -770,7 +777,8 @@ for arch in lsb_archs:
 
     appbat = factory.BuildFactory()
 
-    appbat.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
+    appbat.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk",
+                                           locks=[pkg_lock]))
 
     add_pre_dependency_triggers("appbat", arch, appbat)
 
@@ -790,28 +798,35 @@ for arch in lsb_archs:
                                 workdir="appbat", name="clear-old-results"))
     appbat.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                 workdir="appbat", name="create-results-dir"))
-    appbat.addStep(LSBBuildCommand(command=["./configure"], workdir="appbat",
-                                   name="configure"))
-    appbat.addStep(Compile(command=["make", "appbat", "ENTITYCHECK_QUIET=-q"], 
-                           workdir="appbat", name="build-appbat", 
-                           timeout=build_timeout_seconds))
-    appbat.addStep(LSBBuildCommand(command=["make", "check-appbat"],
+    appbat.addStep(
+        lfbuildbot.LSBConfigureAppbat(command=["./configure"],
+                                      workdir="appbat", name="configure"))
+    appbat.addStep(
+        lfbuildbot.LSBBuildAppbat(command="make appbat ENTITYCHECK_QUIET=-q", 
+                                  workdir="appbat", name="build-appbat", 
+                                  timeout=build_timeout_seconds))
+    appbat.addStep(
+        lfbuildbot.LSBBuildCommand(command=["make", "check-appbat"],
                                    workdir="appbat",
                                    name="check-appbat", haltOnFailure=True))
-    appbat.addStep(Compile(command=["make", "desktop", 
-                                    "ENTITYCHECK_QUIET=-q"], 
-                           workdir="appbat", name="build-desktop", 
-                           timeout=build_timeout_seconds))
-    appbat.addStep(LSBBuildCommand(command=["make", "check-desktop"],
+    appbat.addStep(
+        lfbuildbot.LSBBuildAppbat(command="make desktop ENTITYCHECK_QUIET=-q", 
+                                  workdir="appbat", name="build-desktop", 
+                                  timeout=build_timeout_seconds))
+    appbat.addStep(
+        lfbuildbot.LSBBuildCommand(command=["make", "check-desktop"],
                                    workdir="appbat",
                                    name="check-desktop", haltOnFailure=True))
-    appbat.addStep(Compile(command=["make", "addons", "ENTITYCHECK_QUIET=-q"], 
-                           workdir="appbat", name="build-addons",
-                           timeout=build_timeout_seconds))
-    appbat.addStep(LSBBuildCommand(command=["make", "check-addons"],
+    appbat.addStep(
+        lfbuildbot.LSBBuildAppbat(command="make addons ENTITYCHECK_QUIET=-q", 
+                                  workdir="appbat", name="build-addons",
+                                  timeout=build_timeout_seconds))
+    appbat.addStep(
+        lfbuildbot.LSBBuildCommand(command=["make", "check-addons"],
                                    workdir="appbat",
                                    name="check-addons", haltOnFailure=True))
-    appbat.addStep(LSBBuildCommand(command="cd rpm && make",
+    appbat.addStep(
+        lfbuildbot.LSBBuildCommand(command="cd rpm && make",
                                    name="build-pkg", workdir="appbat",
                                    timeout=build_timeout_seconds))
     appbat.addStep(ShellCommand(
@@ -842,7 +857,8 @@ for arch in lsb_archs:
 
     devchk = factory.BuildFactory()
 
-    devchk.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
+    devchk.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk",
+                                           locks=[pkg_lock]))
 
     add_pre_dependency_triggers("devchk", arch, devchk)
 
