Give a name to the libbat build step.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -739,7 +739,7 @@ for arch in lsb_archs:
                                 workdir="appbat", name="check-pkgcache"))
     libbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make libbat ENTITYCHECK_QUIET=-q", 
-                                  workdir="appbat",
+                                  workdir="appbat", name="build-libbat",
                                   timeout=build_timeout_seconds))
     libbat.addStep(
         lfbuildbot.LSBBuildCommand(command=["make", "check-libbat"],
