Adjust the path of the htpasswd file to fit the new reality.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -32,7 +32,7 @@ from bzr_buildbot import BzrPoller
 
 # Toplevel configuration, used by the builder/scheduler setup.
 
-web_htpasswd_path = "/data/buildbot/buildbot_htpasswd"
+web_htpasswd_path = "/opt/buildbot/htpasswd"
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
 # Timers and timeouts for builds.  We define them as hours here,
