--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -208,13 +208,12 @@ c['prioritizeBuilders'] = prioritize
 # the 'slaves' list defines the set of allowable buildslaves. Each element is
 # a tuple of bot-name and bot-password. These correspond to values given to
 # the buildslave's mktap invocation.
-c['slaves'] = [BuildSlave("lfbuild-x86_64", "bot1passwd"),
-               BuildSlave("lfbuild-x86", "ail1Aebu"),
-               BuildSlave("lfbuild-ia64", "quae7Moh"),
-               BuildSlave("lfbuild-ppc32", "AiSh4aej"),
-               BuildSlave("lfbuild-ppc64", "ai2agaeT"),
-               BuildSlave("lfbuild-s390", "aeGh0ooy"),
-               BuildSlave("lfbuild-s390x", "ahtoop3O")]
+
+c['slaves'] = []
+slave_password_file = open("/opt/buildbot/slave_pwds")
+for line in slave_password_file:
+    (user, pw) = line.strip().split(":")
+    c['slaves'].append(BuildSlave(user, pw)
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave("bot1name", "bot1passwd", max_builds=2)]
