--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -213,7 +213,7 @@ c['slaves'] = []
 slave_password_file = open("/opt/buildbot/slave_pwds")
 for line in slave_password_file:
     (user, pw) = line.strip().split(":")
-    c['slaves'].append(BuildSlave(user, pw)
+    c['slaves'].append(BuildSlave(user, pw))
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave("bot1name", "bot1passwd", max_builds=2)]
