Fix job submission directory.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -306,7 +306,7 @@ jobdir_repos["devchk"] = "misc-test"
 
 sch_jobdir = lfbuildbot.MultiScheduler(
     name="sch_jobdir", builderNames=multi_builder_list, 
-    jobdir="/var/buildbot", repos=jobdir_repos, archs=lsb_archs, 
+    jobdir="/opt/buildbot/jobdir", repos=jobdir_repos, archs=lsb_archs, 
     indep_prj=lsb_arch_indep_projects,
     indep_arch=lsb_buildslave_arch_indep_arch)
 
