Fix IRC status bot config.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -915,7 +915,7 @@ c['status'] = []
 c['status'].append(html.WebStatus(http_port=8009, allowForce=True,
                                   auth=HTPasswdAuth(web_htpasswd_path)))
 
-c['status'].append(words.IRC(host="irc.linuxfoundation.org", nick="lsb_bb",
+c['status'].append(words.IRC(host="irc.freenode.net", nick="lsb_bb",
                              channels=["#lsb"], allowForce=True,
                              notify_events={'exception': 1,
                                             'successToFailure': 1,
