Get rid of double-slashes in some bzr URLs.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -580,9 +580,9 @@ for arch in lsb_archs:
                       mode="copy", timeout=bzr_timeout_seconds, workdir=prj))
         for other_repo in lsb_pkg_subdir_projects[prj]:
             if always_pull_from_devel(other_repo):
-                checkout_url = "%s/lsb/devel/%s" % (bzr_toplevel, other_repo)
+                checkout_url = "%slsb/devel/%s" % (bzr_toplevel, other_repo)
             else:
-                checkout_url = "%s/lsb/%%(branch_name)s/%s" \
+                checkout_url = "%slsb/%%(branch_name)s/%s" \
                     % (bzr_toplevel, other_repo)
 
             b.addStep(ShellCommand(command=["rm", "-rf", "../" + other_repo],
