More double-slashes.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -654,7 +654,7 @@ for arch in lsb_archs:
                                name="clear-old-packaging"))
         b.addStep(ShellCommand(
                 command=["bzr", "checkout", 
-                         WithProperties("%s/lsb/%%(branch_name)s/packaging"
+                         WithProperties("%slsb/%%(branch_name)s/packaging"
                                         % bzr_toplevel),
                          "../packaging"],
                 name="checkout-packaging", timeout=bzr_timeout_seconds))
