Save old build RPMs instead of triggering new ones when needed.
In the past, we would trigger a new build every time one build depended
on another.  This looked difficult to port to the new buildbot, and since
there's a long-standing request to reuse old built packages instead,
we just do that now.

This commit now gets rid of the IndepTriggerable custom scheduler, which
we no longer need.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -156,25 +156,37 @@ build_timeout_seconds = build_timeout_hours * 60 * 60
 # Helper functions
 
 def add_pre_dependency_triggers(project, arch, builder):
+    pkg_install_command = \
+        "ls ../deps/*.rpm | egrep -v src.rpm | " + \
+        "xargs sudo rpm -Uvh --force"
     for dep in lsb_dependencies:
         if project in lsb_dependencies[dep]:
-            builder.addStep(
-                trigger.Trigger(
-                    schedulerNames=["trigger-%s-%s" % (dep, arch)],
-                    waitForFinish=True, updateSourceStamp=False,
-                    haltOnFailure=True,
-                    copy_properties=['build_type', 'branch_name']))
+            builder.addStep(ShellCommand(
+                command=WithProperties("cd .. && tar xzvf ../saved/%%(branch_name:-devel)s/%s-%s.tar.gz && mv results deps" % (dep, arch)),
+                name="unpack-dep-%s-%s" % (dep, arch)))
+            builder.addStep(ShellCommand(
+                command=pkg_install_command,
+                name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock]))
+            builder.addStep(ShellCommand(
+                command=["rm", "-rf", "../deps"],
+                name="remove-dep-%s-%s" % (dep, arch)))
 
 def add_post_dependency_triggers(project, arch, builder):
-    pkg_install_command = \
-        "ls ../results/*.rpm | egrep -v src.rpm | " + \
-        "xargs sudo rpm -Uvh --force"
     if project in lsb_dependencies:
         prj_name = "%s-%s" % (project, arch)
 
-        builder.addStep(ShellCommand(command=pkg_install_command, 
-                                     name="update-pkgs", locks=[pkg_lock],
-                                     flunkOnFailure=False))
+        builder.addStep(ShellCommand(
+            command=["mkdir", "-p",
+                     WithProperties("../../saved/%(branch_name:-devel)s")],
+            name="create-saved-dep-dir"))
+        builder.addStep(ShellCommand(
+            command=["rm", "-f", 
+                     WithProperties("../../saved/%%(branch_name:-devel)s/%s.tar.gz" % prj_name)],
+            name="remove-old-saved-dep-tarball"))
+        builder.addStep(ShellCommand(
+            command=["cp", "../results.tar.gz",
+                     WithProperties("../../saved/%%(branch_name:-devel)s/%s.tar.gz" % prj_name)],
+            name="save-dep-tarball"))
 
 def always_pull_from_devel(project):
     # Figure out if the project needs to be built from devel
@@ -319,11 +331,6 @@ c['schedulers'] = [sch_jobdir]
 # as well as the appbat.
 
 for arch in lsb_archs:
-    sch_libbat = lfbuildbot.IndepTriggerable(name="trigger-libbat-" + arch,
-                                             builderNames=["libbat-" + arch],
-                                             defaultProject="appbat")
-    c['schedulers'].append(sch_libbat)
-
     if arch not in low_resource_archs:
         sch_appbat = scheduler.Scheduler(
             name="sch-appbat-" + arch, branch="lsb/devel/appbat",
@@ -349,14 +356,6 @@ for prj in lsb_pkg_subdir_projects:
         archlist = lsb_archs
     for arch in archlist:
         prj_name = "%s-%s" % (prj, arch)
-
-        for deplist in lsb_dependencies.itervalues():
-            if prj in deplist:
-                sch = lfbuildbot.IndepTriggerable(name="trigger-" + prj_name,
-                                                  builderNames=[prj_name],
-                                                  defaultProject=prj)
-                c['schedulers'].append(sch)
-                break
 
         if arch not in low_resource_archs:
             sch = scheduler.Scheduler(name="sch-" + prj_name,
@@ -392,34 +391,6 @@ for (prj, repo) in lsb_packaging_projects:
                                          builderNames=[prj_name],
                                          treeStableTimer=stable_timer_seconds)
         c['schedulers'].append(sch)
-
-# Triggerable schedulers for dependencies.
-
-for prj in lsb_dependencies:
-    # libbat is special, we define its schedulers earlier.
-    if prj != "libbat":
-        if prj in lsb_arch_indep_projects:
-            archlist = [lsb_buildslave_arch_indep_arch]
-        else:
-            archlist = lsb_archs
-
-        devel_only = always_pull_from_devel(prj)
-
-        # Get the repository name to pull from.
-        default_prj = prj
-        for (pkgprj, repo) in lsb_packaging_projects:
-            if pkgprj == prj:
-                default_prj = repo
-                break
-
-        # Actually set up the schedulers.
-        for arch in archlist:
-            prj_name = "%s-%s" % (prj, arch)
-            sch = lfbuildbot.IndepTriggerable(name="trigger-" + prj_name,
-                                              builderNames=[prj_name],
-                                              defaultProject=default_prj,
-                                              alwaysDevel=devel_only)
-            c["schedulers"].append(sch)
 
 
 ####### BUILDERS
