Immediately halt builds if dependent packages fail to install.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -166,7 +166,8 @@ def add_pre_dependency_triggers(project, arch, builder):
                 name="unpack-dep-%s-%s" % (dep, arch)))
             builder.addStep(ShellCommand(
                 command=pkg_install_command,
-                name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock]))
+                name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock],
+                haltOnFailure=True))
             builder.addStep(ShellCommand(
                 command=["rm", "-rf", "../deps"],
                 name="remove-dep-%s-%s" % (dep, arch)))
