Some build deps should always be pulled from devel.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -161,9 +161,20 @@ def add_pre_dependency_triggers(project, arch, builder):
         "xargs sudo rpm -Uvh --force"
     for dep in lsb_dependencies:
         if project in lsb_dependencies[dep]:
-            builder.addStep(ShellCommand(
-                command=WithProperties("cd .. && tar xzvf ../saved/%%(branch_name:-devel)s/%s-%s.tar.gz && mv results deps" % (dep, arch)),
-                name="unpack-dep-%s-%s" % (dep, arch)))
+            # First, see if we need this from devel always.
+            always_devel = True
+            for branch in branch_watch_list.keys():
+                if dep in branch_watch_list[branch]:
+                    always_devel = False
+                    break
+
+            # Now add the steps.
+            if always_devel:
+                unpack_command="cd .. && tar xzvf ../saved/devel/%s-%s.tar.gz && mv results deps" % (dep, arch)
+            else:
+                unpack_command=WithProperties("cd .. && tar xzvf ../saved/%%(branch_name:-devel)s/%s-%s.tar.gz && mv results deps" % (dep, arch))
+            builder.addStep(ShellCommand(command=unpack_command, 
+                                         name="unpack-dep-%s-%s" % (dep, arch)))
             builder.addStep(ShellCommand(
                 command=pkg_install_command,
                 name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock],
