Revert dep of azov-qt tests on libbat; it's not the problem w/ devel.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -120,8 +120,7 @@ lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests",
                                      "xts5-test"],
                      "qmtest-harness": ["libstdcpp-test"],
                      "lsbappchk-python": ["python-test"],
-                     "libbat": ["lsb-xvfb", "appbat", "azov-qt3-tests",
-                                "azov-qt4-tests"],
+                     "libbat": ["lsb-xvfb", "appbat"],
                      "lsbappchk": ["appbat"],
                      "lsbpkgchk": ["appbat"]}
 
