Clean appbat and libbat at the end of the build.
This can reclaim over a gigabyte of space, which can be important for
build slaves running on VMs.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -744,6 +744,8 @@ for arch in lsb_archs:
         ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
                      workdir="appbat", name="save-pkgcache",
                      flunkOnFailure=False, haltOnFailure=False))
+    libbat.addStep(ShellCommand(command=["make", "clean"],
+                                workdir="appbat", name="clean"))
 
     add_post_dependency_triggers("libbat", arch, libbat)
 
@@ -825,6 +827,9 @@ for arch in lsb_archs:
                    masterdest=WithProperties("appbat-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
                    workdir="appbat", name="upload-results", 
                    flunkOnFailure=False))
+    appbat.addStep(ShellCommand(command=["make", "clean"],
+                                workdir="appbat", name="clean"))
+
     add_post_dependency_triggers("appbat", arch, appbat)
 
     if "appbat" in lsb_dependencies:
