lsb-xvfb shouldn't need libbat to build

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -120,7 +120,7 @@ lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests",
                                      "xts5-test"],
                      "qmtest-harness": ["libstdcpp-test"],
                      "lsbappchk-python": ["python-test"],
-                     "libbat": ["lsb-xvfb", "appbat"],
+                     "libbat": ["appbat"],
                      "lsbappchk": ["appbat"],
                      "lsbpkgchk": ["appbat"]}
 
