Force libbat/appbat "make clean" to run even if the build fails.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -745,7 +745,8 @@ for arch in lsb_archs:
                      workdir="appbat", name="save-pkgcache",
                      flunkOnFailure=False, haltOnFailure=False))
     libbat.addStep(ShellCommand(command=["make", "clean"],
-                                workdir="appbat", name="clean"))
+                                workdir="appbat", name="clean",
+                                alwaysRun=True))
 
     add_post_dependency_triggers("libbat", arch, libbat)
 
@@ -828,7 +829,8 @@ for arch in lsb_archs:
                    workdir="appbat", name="upload-results", 
                    flunkOnFailure=False))
     appbat.addStep(ShellCommand(command=["make", "clean"],
-                                workdir="appbat", name="clean"))
+                                workdir="appbat", name="clean",
+                                alwaysRun=True))
 
     add_post_dependency_triggers("appbat", arch, appbat)
 
